samples/_failures_safe/1761225294_2875fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c40e512.c: In function ‘main’:
./samples/SAFE/__tmp_7c40e512.c:160:21: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  160 |                     print
      |                     ^~~~~
      |                     printf
./samples/SAFE/__tmp_7c40e512.c:160:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7c40e512.c:160:26: error: expected ‘;’ at end of input
  160 |                     print
      |                          ^
      |                          ;
./samples/SAFE/__tmp_7c40e512.c:160:21: error: expected declaration or statement at end of input
  160 |                     print
      |                     ^~~~~
./samples/SAFE/__tmp_7c40e512.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c40e512.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c40e512.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c40e512.c:160:21: error: expected declaration or statement at end of input
